// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package vaccel;

message VaccelError {
	oneof error {
		int64 vaccel_error = 1;
		int64 agent_error = 2;
	}
};
