// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package vaccel;

message Status {
	uint32 code = 3;
	string message = 4;
}

enum ErrorType {
	FFI = 0;
	FFI_WITH_STATUS = 1;
	INVALID_ARGUMENT = 2;
	UNINITIALIZED = 3;
	OUT_OF_BOUNDS = 4;
	EMPTY_VALUE = 5;
	CONVERSION_FAILED = 6;
}

message Error {
	ErrorType type = 1;
	optional uint32 ffi_error = 2;
	optional Status status = 3;
}
